@@ -18,6 +18,8 @@
  * Boston, MA 02110-1301, USA.
  */
 
+#include "test_utils.h"
+
 #include <errno.h>
 #include <unistd.h>
 #include <string.h>
@@ -233,16 +235,7 @@ int main(int argc, char** argv)
     gtk_test_init(&argc, &argv, NULL);
 
     /* Hopefully make test independent of the path it's called from. */
-    while (!g_file_test ("WebKit/gtk/tests/resources/test.html", G_FILE_TEST_EXISTS)) {
-        gchar *path_name;
-
-        g_chdir("..");
-
-        g_assert(!g_str_equal((path_name = g_get_current_dir()), "/"));
-        g_free(path_name);
-    }
-
-    g_chdir("WebKit/gtk/tests/resources/");
+    testutils_relative_chdir("WebKit/gtk/tests/resources/test.html", argv[0]);
 
     server = soup_server_new(SOUP_SERVER_PORT, 0, NULL);
     soup_server_run_async(server);
